--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -7,6 +7,7 @@
 
 # Title of your site
 title = "geo{DataScience}"
+publishDir = "docs"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
